build inside docker

--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
   "version": "1.0.0",
   "description": "Example demonstrates how to setup a simple HTTP GET endpoint with python",
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "serverless-docker-artifacts": "^0.1.1"
+  }
 }
